# solana-gym-env

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SURFPOOL_BUG_REPORT.md  TRANSACTION_TRACKING.md  clean_logging.py  enhanced_planner.py  main.py  package.json  planner.py  pyproject.toml  quick_trajectory_demo.py  requirements.txt  simple_explorer.py  skill_library.py  surfpool_env.py  surfpool_repro.ts  test_solana_import.py  tests.py  trajectory_tracker.py  trajectory_visualizer.py  transaction_parser.py  view_simple_explorer_progress.py  voyager_env.py  voyager_env_with_tracking.py
.clinerules/: 01-project.md
.github/workflows/: ci.yml
data/: program_ids.csv
docs/: BLOCKERS.md  IMPLEMENTATION_PLAN_SINGLE_TX.md  MILESTONES.md  PLAN.md
examples/: README.md
examples/demos/: demo_skill_generation.py  demo_trajectory_visualization.py  demo_transaction_complexity.py  system_program_demo.py
examples/tests/: surfpool_repro.py  test_surfpool_blockhash.py  test_surfpool_data_field.py  test_surfpool_send_base58.py  test_surfpool_send_raw.py
rag_store/: rag.py
sandbox/: surfpool_service.py
skill_manager/: ts_skill_manager.py
skill_runner/: package.json  runSkill.test.ts  runSkill.ts
tests/python/: test_base64_blockhash_issue.py  test_base64_transactions.py  (+4 more)
tracking/: trajectory_data_backup.json  trajectory_visualizer.py  transaction_parser.py  voyager_env_with_tracking.py
visualizations/: README.md
voyager/: known_programs.py  simple_explorer.py  solana_voyager_env.py  surfpool_env.py  voyager_clone.py  voyager_env.py
(+23 files in other folders)
