[project]
name = "solana-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "javascript>=1!1.2.2",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.28",
    "openai>=1.93.0",
    "setuptools>=80.9.0",
]
