[project]
name = "solana-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "base58",
    "chromadb>=1.0.15",
    "gymnasium",
    "javascript>=1!1.2.2",
    "langchain>=0.3.26",
    "langchain-anthropic>=0.3.17",
    "langchain-community",
    "langchain-openai>=0.3.28",
    "matplotlib",
    "openai>=1.93.0",
    "pandas",
    "plotly",
    "python-dotenv",
    "requests",
    "setuptools>=80.9.0",
    "solana",
]
